# CPP-ProxyServer-MySQL

./: CMakeLists.txt  README.md  test-task.md
src/: Logger.cpp  Logger.hpp  SQLhandler.cpp  SQLhandler.hpp  client-main.cpp  client-sock.cpp  client-sock.hpp  client2-main.cpp  proxy-server.cpp  proxy-server.hpp  server-main.cpp
